// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`access > ESM server retreives watched 'pacakge-1' 1`] = `
"/* esm.sh - @esm.dev/package-1@0.0.1 */
function o(){return"foo"}export{o as foo};
//# sourceMappingURL=package-1.mjs.map"
`;

exports[`access > ESM server retreives watched 'package-2' 1`] = `
"/* esm.sh - @esm.dev/package-2@0.0.1 */
export * from "/@esm.dev/package-2@0.0.1/es2022/package-2.mjs";
"
`;

exports[`watching with 'legacy' method > is updated 1`] = `
"/* esm.sh - @esm.dev/package-1@0.0.1 */
function o(){return"foos"}export{o as foos};
//# sourceMappingURL=package-1.mjs.map"
`;

exports[`watching with 'modern' method > is updated 1`] = `
"/* esm.sh - @esm.dev/package-1@0.0.1 */
function o(){return"foos"}export{o as foos};
//# sourceMappingURL=package-1.mjs.map"
`;
